--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,11 @@
 
         or
         <pre style="background-color: lightgray; padding: 16px">
-{
-    species
-}
+    {
+        species {
+            scientific_name
+        }
+    }
 </pre>
     </p>
 </body>
