--- a/public/index.html
+++ b/public/index.html
@@ -6,37 +6,23 @@
 
 <body>
     <h1>About the Dragonfly GraphQL API</h1>
-    <p>The API is found under route <a href="/api">/api</a></p>
 
+    <h2>Endpoint</h2>
+    <pre>
+            https://dragonsgraphqlapi.jonasmyrenas.now.sh/api
+    </pre>
+    <h2>Main sources</h2>
+    <ol>
+        <li>Atlas of the European Dragonflies and Damselflies, Jean-Pierre Boudot(Editor), Vincent J Kalkman(Editor),
+            Fons Peels(Illustrator)</li>
+        <li>Dragonflies and Damselflies of Europe: A scientific approach to the identification of European Odonata
+            without capture, Galliani, C.; Scherini, R.; Piglia, A.</li>
+        <li>Nordens trollsländor, M. Billqvist, D. Andersson, C. Bergendorff</li>
+    </ol>
+
+    <h2>License</h2>
     <p>
-        Try to query it with
-        <pre style="background-color: lightgray; padding: 16px">
-{
-    specie(items_id:"f0264cd93fc96310d176cbde4c32be52") {
-        scientific_name
-        description
-        local_names
-        behaviour
-        habitat
-        similar_species
-        distribution
-        flight_period
-        size {
-            length
-            wingspan
-        }
-    }
-}
-</pre>
-
-        or
-        <pre style="background-color: lightgray; padding: 16px">
-    {
-        species {
-            scientific_name
-        }
-    }
-</pre>
+        ISC: <a href="https://en.wikipedia.org/wiki/ISC_license">https://en.wikipedia.org/wiki/ISC_license</a>
     </p>
 </body>
 
