updated A. affinis & A. caerulea and readme

--- a/public/index.html
+++ b/public/index.html
@@ -11,19 +11,25 @@
     <pre>
             https://dragonsgraphqlapi.jonasmyrenas.now.sh/api
     </pre>
+    <p>
+        To use the API you need a API key. Email jonas@myrenas.se ta aquire one.
+    </p>
+
     <h2>Main sources</h2>
     <ol>
         <li>Atlas of the European Dragonflies and Damselflies, Jean-Pierre Boudot(Editor), Vincent J Kalkman(Editor),
             Fons Peels(Illustrator)</li>
         <li>Dragonflies and Damselflies of Europe: A scientific approach to the identification of European Odonata
             without capture, Galliani, C.; Scherini, R.; Piglia, A.</li>
+        <li>Field guide to the dargonflies of Brittain and Europe, Klaas-Douwe B Dijkstra.</li>
         <li>Nordens trollsländor, M. Billqvist, D. Andersson, C. Bergendorff</li>
     </ol>
 
-    <h2>License</h2>
-    <p>
-        ISC: <a href="https://en.wikipedia.org/wiki/ISC_license">https://en.wikipedia.org/wiki/ISC_license</a>
-    </p>
+    <h2>Work in progress</h2>
+    <p>This is a work in progress, not many species are covered yet. If you like to contribute, please contact
+        jonas@myrenas.se for details on how to help.</p>
+
+
 </body>
 
 </html>
