Changed about page

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
             https://dragonsgraphqlapi.jonasmyrenas.now.sh/api
     </pre>
     <p>
-      To use the API you need a API key. Email jonas@myrenas.se ta aquire one.
+      To use the API you need a API key. Email jonas@myrenas.se for more
+      information.
     </p>
 
     <h2>Main sources</h2>
@@ -32,10 +33,16 @@
       <li>Nordens trollsländor, M. Billqvist, D. Andersson, C. Bergendorff</li>
     </ol>
 
-    <h2>Work in progress</h2>
+    <h2>Contributing</h2>
     <p>
-      This is a work in progress, not many species are covered yet. If you like
-      to contribute, please contact jonas@myrenas.se for details on how to help.
+      This is a work in progress. The aim is to continuosly keep developing. If
+      you like to contribute, please contact jonas@myrenas.se.
+    </p>
+
+    <h2>API Consumers</h2>
+    <p>
+      So far the data from this API is used in one webbsite:
+      <a href="https://dragonfly.guide">Dragonfly.guide</a>
     </p>
   </body>
 </html>
